The movie images are stored in the users %appdata% directory. If the images for the movies in the db exist, then they are loaded, otherwise there will be downloaded first.